# retune

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  AGENTS.md  Dockerfile  README.md  biome.json  deploy.sh  docker-compose.yml  lighthouserc.json  package.json  pnpm-lock.yaml  turbo.json
.github/: renovate.json
.github/workflows/: ci-cd.yml  cognitive-cycle.yml  security-scan.yml
.husky/: pre-commit
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/api/: README.md  (+2 more)
apps/ml/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/ml/scripts/: gen-grpc.sh
apps/ml/src/retune_ml/: __init__.py  contracts.py  grpc_service.py  handlers.py  main.py  settings.py
apps/ml/src/retune_ml/grpc_gen/: ml_pb2.py  ml_pb2.pyi  ml_pb2_grpc.py
apps/ml/src/retune_ml/lib/: clock.py  logging.py
apps/ml/src/retune_ml/models/: __init__.py  discourse_classifier.py  gliner_extractor.py  registry.py
apps/ml/src/retune_ml/routes/: __init__.py  classify_discourse.py  embed.py  extract_spans.py  health.py
apps/ml/tests/: test_classify_discourse.py  test_embed.py  test_extract_spans.py  test_grpc_classify_discourse.py  test_grpc_extract_spans.py  test_grpc_service.py  test_health.py
docs/: AUTH_DB_WIRING.md  PERFORMANCE_AUDIT.md  REPO_EXHAUSTIVE_MAP.md  UI_PERFORMANCE.md  VERIFIED_RUNTIME_TRUTH.md  architecture_audit.md  billing-operations.md  db-runtime-mapping.md  design-system.md  dev-onboarding.md  i18n-architecture.md  prd-2.0.md  technical-2.0.md  uiSpec.md
scripts/: copy-pdf-worker.mjs  repro-issue.sh  seed.ts  setup.sh  test-resume-gen.ts
supabase/: config.toml
test-data/: SHUBHAM KANSE 3.5YOE.docx  Shubham_Kanse_3.5yoe.docx  Shubham_Kanse_CV.docx  Shubham_Kanse_Resume.docx  jd.md  profile.md
(+773 files in other folders)
