[project]
name = "retune-ml"
version = "0.1.0"
description = "Retune ML compute layer — the brain's perceptual + generative cortex."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "Shubham Kanse" }]

# Pinned for reproducibility. Heavy ML deps (torch, vLLM, GLiNER, DeBERTa)
# are added in commit #2 when extraction lands. Commit #1 is intentionally
# the lightest possible viable service: FastAPI + a deterministic embedding
# stub so the TS workbench can wire its ML client end-to-end.
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "numpy>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "pyright>=1.1.385",
  "httpx>=0.28.0",
  # gRPC codegen (commit #4). Used by apps/ml/scripts/gen-grpc.sh.
  "grpcio>=1.66.0",
  "grpcio-tools>=1.66.0",
]

# Future: deps gated behind extras so the dev image stays small.
ml-extraction = [
  "gliner>=0.2.16",
  "onnxruntime>=1.20.0",
  "fastcoref>=2.1.6",
]
ml-generation = [
  # vLLM, outlines, etc. — added in commit #4 (composer)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retune_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
